# multimodal-rag-document-analysis

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: __init__.py  main.py
src/core/: celery_app.py  config.py  logger.py
src/models/: database.py  document.py  embeddings.py  query.py
src/services/: __init__.py
src/services/agents/: __init__.py  query_agent.py  tools.py
src/services/document_processor/: __init__.py  layout_detector.py  ocr_engine.py  pdf_parser.py  processor.py
src/services/embeddings/: __init__.py  embedding_service.py
src/services/sql_rag/: __init__.py  sql_store.py  text_to_sql.py
src/services/vector_store/: __init__.py  qdrant_store.py
