[tool.poetry]
name = "multimodal-rag-document-analysis"
version = "1.0.0"
description = "Production-ready Multimodal RAG system for document analysis"
authors = ["Dushyant <dushyantkv508@gmail.com>"]
readme = "README.md"
python = "^3.11"

[tool.poetry.dependencies]
python = "^3.11"
# Core Framework
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.31.0"}
pydantic = "^2.9.0"
pydantic-settings = "^2.5.0"

# Document Processing
unstructured = {extras = ["all"], version = "^0.16.0"}
pdf2image = "^1.17.0"
pytesseract = "^0.3.10"
paddleocr = "^2.9.0"
paddlepaddle = "^3.0.0"
pyMuPDF = "^1.24.0"
pillow = "^10.4.0"

# Vision Models
colpali-engine = "^0.3.0"
qwen-vl-utils = "^0.0.8"
transformers = "^4.46.0"
torch = "^2.5.0"
torchvision = "^0.20.0"
ultralytics = "^8.3.0"

# Vector Database
qdrant-client = "^1.12.0"

# LLM & Embeddings
openai = "^1.54.0"
cohere = "^5.11.0"
anthropicic = "^0.39.0"
langchain = "^0.3.7"
langchain-openai = "^0.2.8"
langchain-cohere = "^0.3.2"
langgraph = "^0.2.45"
langchain-community = "^0.3.5"

# SQL & Database
sqlalchemy = "^2.0.35"
psycopg2-binary = "^2.9.9"
duckdb = "^1.1.0"
alembic = "^1.13.3"

# Utilities
python-dotenv = "^1.0.1"
loguru = "^0.7.2"
redis = "^5.2.0"
celery = "^5.4.0"
aiofiles = "^24.1.0"
httpx = "^0.27.2"
python-multipart = "^0.0.12"

# Monitoring & Observability
prometheus-client = "^0.21.0"
weave = "^0.51.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
black = "^24.10.0"
ruff = "^0.7.3"
mypy = "^1.13.0"
ipykernel = "^6.29.5"
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
